--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hot-loader": "^4.13.0",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^4.2.0"
+  },
+  "devDependencies": {
+    "webpack": "^3.8.0",
+    "webpack-dev-server": "^2.9.7"
   }
 }
