--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.13",
     "react": "^17.0.1",
+    "react-addons-update": "^15.6.2",
     "react-dom": "^17.0.1",
-    "react-hot-loader": "^1.3.0",
+    "react-hot-loader": "^4.13.0",
     "webpack-cli": "^4.2.0"
   },
   "devDependencies": {
