밸로퍼트 마무리

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^8.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.13",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-addons-update": "^15.6.2",
     "react-dom": "^17.0.1",
